# safeinput

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/safeinput/: __init__.py  sqli.py  utils.py  xss.py
tests/: test_sanitizer.py
