[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safeinput"
version = "1.0.0"
authors = [
  { name="Arsalan Anwar", email="arsalan.anwar.7777@gmail.com" },
]
description = "An enterprise-ready python utility package for XSS sanitization, SQLi detection, and null-byte input sanitization."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = ["pytest"]